--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,15 @@ button {
     margin: 50px 0 20px;
     cursor: pointer;
 }
+
+.form-submitted {
+    background-color: rgba(255, 255, 255, 0.932);
+    font-size: 16px;
+    font-weight: bold;
+    justify-self: center;
+    align-content: center;
+    text-align: center;
+    width: 50vh;
+    height: 20vh;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+}
